--- a/migrate/makefile
+++ b/migrate/makefile
@@ -5,5 +5,5 @@ build:
 	@GOOS=darwin GOARCH=amd64 CGO_ENABLED=0 go build -o ./bin/darwin/migrate -ldflags "-X main.BUILD=S$(BUILD)" .
 	@GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o ./bin/linux/migrate -ldflags "-X main.BUILD=$(BUILD)" .
 
-test:
+tests:
 	go test .
